--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>2.14.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
 
     </dependencies>
 </project>
